--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 <!-- Footer Section Start -->
 <footer>
   <div class="text">
-    <span>Created By <a href="https://www.instagram.com/me_abhimishra4u/"target=_blank>Abhishek Mishra</a> |  2022 All © Rights Reserved</span>
+    <span>Created By <a href="https://www.instagram.com/owlabhi/"target=_blank>Abhishek Mishra</a> |  2022 All © Rights Reserved</span>
   </div>
 
 </footer>
